--- a/session.html
+++ b/session.html
@@ -8,25 +8,25 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.4fc72fc7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.be02fdac.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.37b1b84e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.11161d07.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8204c0cc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.05238d0f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.99a282f9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.48c820ce.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.cc6550a7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.41c9fdd8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.aa51eca4.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/3.lmnCMh_c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.HPcZXbHp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bc4Owqld.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DWQQa3rT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.BtfrWJUF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DwR_WnSG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CraiMYVo.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BUh1W8UK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.LeBcIEX0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.CNVYODXw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.98GbFQm-.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-1yabacw"><a href="./" class="one-liner svelte-1yabacw" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-1yabacw"></i> Retour</a> <div class="DNA_cont svelte-1yabacw" data-svelte-h="svelte-1vxv50n"><div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div> <div class="nucleobase svelte-1yabacw"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-1f8q20m"><a href="./" class="one-liner svelte-1f8q20m" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-1f8q20m"></i> Retour</a> <div class="DNA_cont svelte-1f8q20m" data-svelte-h="svelte-1vxv50n"><div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div> <div class="nucleobase svelte-1f8q20m"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_1nkwba7 = {
+					__sveltekit_1ckjr91 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.be02fdac.js"),
-						import("./_app/immutable/entry/app.05238d0f.js")
+						import("./_app/immutable/entry/start.HPcZXbHp.js"),
+						import("./_app/immutable/entry/app.DwR_WnSG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
