--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.afbf132b.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.466ac591.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.5ff2f683.js">
+		<link href="./_app/immutable/assets/2.f1f6b7fa.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.be862d37.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.61087042.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.11161d07.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.b8aa945f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c3e481d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8629de9c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.800df527.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1111d42d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.7e864e0f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.2158ae01.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.f948e159.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.836312ab.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-78w956"><div class="sticky-top svelte-78w956" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-78w956" alt="JFR 2024"></div> <div id="search-container" class="svelte-78w956"><input id="search" type="text" placeholder="Que recherchez-vous ?" class="svelte-78w956"> <button class="btn-delete-search svelte-78w956" data-svelte-h="svelte-1jaz7pi">❌</button></div> <nav class="navbar svelte-78w956"><ul class="menu svelte-78w956"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-78w956"></div>  <button class="back-to-top svelte-55d38i hidden" data-svelte-h="svelte-14kachb">🔝</button> </main> 
+		<div style="display: contents">   <main class="svelte-t87b5d"><div class="sticky-top svelte-t87b5d" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-t87b5d" alt="JFR 2024"></div> <div id="filter-row" class="svelte-t87b5d"><div id="search-container" class="svelte-t87b5d"><input id="search" type="text" placeholder="Que recherchez-vous ?" class="svelte-t87b5d"> <button class="btn-delete-search svelte-t87b5d" data-svelte-h="svelte-1jaz7pi">❌</button></div> <div id="search-options" class="svelte-t87b5d"><div><input type="checkbox" id="alphabetic-sort" class="svelte-t87b5d"> <label for="alphabetic-sort" data-svelte-h="svelte-rh4tah">Tri A-Z</label></div> <div><input type="checkbox" id="only-videos" class="svelte-t87b5d"> <label for="only-videos" data-svelte-h="svelte-1n5oo64">Seulement avec média</label></div></div></div> <nav class="navbar svelte-t87b5d"><ul class="menu svelte-t87b5d"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-t87b5d"></div>  <button class="back-to-top svelte-t2psqs hidden" title="Back To Top" data-svelte-h="svelte-1dhpr16"><svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17 15L12 10L7 15" stroke="#000000" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="round" data-darkreader-inline-stroke="" style="--darkreader-inline-stroke: #e8e6e3;"></path></g></svg> </button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1co68ja = {
+					__sveltekit_ofstyt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.466ac591.js"),
-						import("./_app/immutable/entry/app.c3e481d7.js")
+						import("./_app/immutable/entry/start.be862d37.js"),
+						import("./_app/immutable/entry/app.800df527.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
