--- a/session.html
+++ b/session.html
@@ -9,24 +9,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.d2de1a0e.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.466ac591.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.5ff2f683.js">
+		<link href="./_app/immutable/assets/3.4ceb7453.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.be862d37.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.61087042.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.11161d07.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.b8aa945f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c3e481d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.8629de9c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.800df527.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1111d42d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.7e864e0f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.71c90550.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.ce84c238.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.836312ab.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.5030c270.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.085e3806.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-d7kl4h"><a href="./" class="one-liner svelte-d7kl4h" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-d7kl4h"></i> Retour</a> <div class="DNA_cont svelte-d7kl4h" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div> <div class="nucleobase svelte-d7kl4h"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-1at5458"><a href="./" class="one-liner svelte-1at5458" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-1at5458"></i> Retour</a> <div class="DNA_cont svelte-1at5458" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div> <div class="nucleobase svelte-1at5458"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_1co68ja = {
+					__sveltekit_ofstyt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.466ac591.js"),
-						import("./_app/immutable/entry/app.c3e481d7.js")
+						import("./_app/immutable/entry/start.be862d37.js"),
+						import("./_app/immutable/entry/app.800df527.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
