--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.BSlZyOaH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CL4leLnG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BsQrASX3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DWQQa3rT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DMimFIVL.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D3EAmoq8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CafIt91_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BXHTVmDt.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.SIouDn-5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.BEM4e-wm.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
+		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.bcc4c265.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.30b62b21.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.87046fbf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1acf407e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d8056759.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.8aee3b73.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-w2lq66"><div class="sticky-top svelte-w2lq66" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-w2lq66" alt="JFR 2024"></div> <div id="filter-row" class="svelte-w2lq66"><div id="search-container" class="svelte-w2lq66"><input id="search" type="text" placeholder="Que recherchez-vous ?" class="svelte-w2lq66"> <button class="btn-delete-search svelte-w2lq66" data-svelte-h="svelte-1jaz7pi">❌</button></div> <div id="search-options" class="svelte-w2lq66"><div class="svelte-w2lq66"><input type="checkbox" id="alphabetic-sort"> <label for="alphabetic-sort" data-svelte-h="svelte-rh4tah">Tri A-Z</label></div> <div class="svelte-w2lq66"><input type="checkbox" id="only-videos"> <label for="only-videos" data-svelte-h="svelte-1n5oo64">Seulement avec média</label></div></div></div> <nav class="navbar svelte-w2lq66"><ul class="menu svelte-w2lq66"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-w2lq66"></div>  <button class="back-to-top svelte-t2psqs hidden" title="Back To Top" data-svelte-h="svelte-1dhpr16"><svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17 15L12 10L7 15" stroke="#000000" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="round" data-darkreader-inline-stroke="" style="--darkreader-inline-stroke: #e8e6e3;"></path></g></svg> </button> </main> 
+		<div style="display: contents">   <main class="svelte-ro9k85"><div class="sticky-top svelte-ro9k85" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-ro9k85" alt="JFR 2024"></div> <div id="filter-row" class="svelte-ro9k85"><div id="search-container" class="svelte-ro9k85"><input id="search" type="text" placeholder="Que recherchez-vous ?" class="svelte-ro9k85"> <button class="btn-delete-search svelte-ro9k85" title="Effacer" style="visibility: hidden;"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="#b3b3b3" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg></button></div> <div id="search-options" class="svelte-ro9k85"><div class="svelte-ro9k85"><input type="checkbox" id="alphabetic-sort"> <label for="alphabetic-sort" data-svelte-h="svelte-rh4tah">Tri A-Z</label></div> <div class="svelte-ro9k85"><input type="checkbox" id="only-videos"> <label for="only-videos" data-svelte-h="svelte-1n5oo64">Seulement avec média</label></div></div></div> <nav class="navbar svelte-ro9k85"><ul class="menu svelte-ro9k85"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-ro9k85"></div>  <button class="back-to-top svelte-1a79323 hidden" title="Back To Top" data-svelte-h="svelte-1muz9rd"><svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17 15L12 10L7 15" stroke="#11d7f2" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="round"></path></g></svg> </button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1si2iu1 = {
+					__sveltekit_c86qk3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CL4leLnG.js"),
-						import("./_app/immutable/entry/app.D3EAmoq8.js")
+						import("./_app/immutable/entry/start.30b62b21.js"),
+						import("./_app/immutable/entry/app.d8056759.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
