--- a/session.html
+++ b/session.html
@@ -8,25 +8,25 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.BGNLH3v5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CL4leLnG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BsQrASX3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DWQQa3rT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DMimFIVL.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D3EAmoq8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CafIt91_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BXHTVmDt.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.CxASxm_w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.BEM4e-wm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CNHFlq1t.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/3.9a25cd12.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.30b62b21.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.87046fbf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1acf407e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d8056759.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.800cd830.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9b95553a.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-18uq0zv"><a href="./" class="one-liner svelte-18uq0zv" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-18uq0zv"></i> Retour</a> <div class="DNA_cont svelte-18uq0zv" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-18uq0zv"><a href="./" class="one-liner svelte-18uq0zv" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-18uq0zv"></i> Retour</a> <div class="DNA_cont svelte-18uq0zv" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_1si2iu1 = {
+					__sveltekit_c86qk3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CL4leLnG.js"),
-						import("./_app/immutable/entry/app.D3EAmoq8.js")
+						import("./_app/immutable/entry/start.30b62b21.js"),
+						import("./_app/immutable/entry/app.d8056759.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
