--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.bcc4c265.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.30b62b21.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.87046fbf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6a020622.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.41710613.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1acf407e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d8056759.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1391fc83.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1269ce83.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8aee3b73.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.4a122416.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_c86qk3 = {
+					__sveltekit_1cmr4vp = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.30b62b21.js"),
-						import("./_app/immutable/entry/app.d8056759.js")
+						import("./_app/immutable/entry/start.6a020622.js"),
+						import("./_app/immutable/entry/app.1269ce83.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
