--- a/session.html
+++ b/session.html
@@ -9,24 +9,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.9a25cd12.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.30b62b21.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.87046fbf.js">
+		<link href="./_app/immutable/assets/3.298245b8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6a020622.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.41710613.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1acf407e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d8056759.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1391fc83.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1269ce83.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.800cd830.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.41b53aeb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9b95553a.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e8c02540.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-18uq0zv"><a href="./" class="one-liner svelte-18uq0zv" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-18uq0zv"></i> Retour</a> <div class="DNA_cont svelte-18uq0zv" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div> <div class="nucleobase svelte-18uq0zv"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-jbyr2f"><a href="./" class="one-liner svelte-jbyr2f" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-jbyr2f"></i> Retour</a> <div class="DNA_cont svelte-jbyr2f" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_c86qk3 = {
+					__sveltekit_1cmr4vp = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.30b62b21.js"),
-						import("./_app/immutable/entry/app.d8056759.js")
+						import("./_app/immutable/entry/start.6a020622.js"),
+						import("./_app/immutable/entry/app.1269ce83.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
