--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.bcc4c265.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6a020622.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.41710613.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1391fc83.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1269ce83.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.4a122416.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
+		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.CqH9UyWa.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DHPVvy3J.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BKsagYVn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.a8AA66vu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.D52O7GZ3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DsgfxI2b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdRF83hW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C3Zu06lm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C_KO1gla.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.25CGPZa3.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-ro9k85"><div class="sticky-top svelte-ro9k85" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-ro9k85" alt="JFR 2024"></div> <div id="filter-row" class="svelte-ro9k85"><div id="search-container" class="svelte-ro9k85"><input id="search" type="text" placeholder="Que recherchez-vous ?" class="svelte-ro9k85"> <button class="btn-delete-search svelte-ro9k85" title="Effacer" style="visibility: hidden;"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="#b3b3b3" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg></button></div> <div id="search-options" class="svelte-ro9k85"><div class="svelte-ro9k85"><input type="checkbox" id="alphabetic-sort"> <label for="alphabetic-sort" data-svelte-h="svelte-rh4tah">Tri A-Z</label></div> <div class="svelte-ro9k85"><input type="checkbox" id="only-videos"> <label for="only-videos" data-svelte-h="svelte-1n5oo64">Seulement avec média</label></div></div></div> <nav class="navbar svelte-ro9k85"><ul class="menu svelte-ro9k85"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-ro9k85"></div>  <button class="back-to-top svelte-1a79323 hidden" title="Back To Top" data-svelte-h="svelte-1muz9rd"><svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17 15L12 10L7 15" stroke="#11d7f2" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="round"></path></g></svg> </button> </main> 
+		<div style="display: contents">   <main class="svelte-1dfpwxx"><div class="sticky-top svelte-1dfpwxx" id="top-header"><div><img src="./jfr_2024.png" class="logo svelte-1dfpwxx" alt="JFR 2024"></div> <div id="filter-row" class="svelte-1dfpwxx"><div id="search-container" class="svelte-1dfpwxx"><input id="search" type="search" placeholder="Que recherchez-vous ?" class="svelte-1dfpwxx"></div> <div id="search-options" class="svelte-1dfpwxx"><button type="button" title="Tri A-Z" class="svelte-1dfpwxx" data-svelte-h="svelte-18ysn9e"><svg width="24px" height="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.048"></g><g id="SVGRepo_iconCarrier"><path d="M10.22 15.97L9 17.19V5C9 4.59 8.66 4.25 8.25 4.25C7.84 4.25 7.5 4.59 7.5 5V17.19L6.28 15.97C5.99 15.68 5.51 15.68 5.22 15.97C4.93 16.26 4.93 16.74 5.22 17.03L7.72 19.53C7.79 19.6 7.87 19.65 7.96 19.69C8.05 19.73 8.15 19.75 8.25 19.75C8.35 19.75 8.45 19.73 8.54 19.69C8.63 19.65 8.71 19.6 8.78 19.53L11.28 17.03C11.57 16.74 11.57 16.26 11.28 15.97C10.99 15.68 10.51 15.68 10.22 15.97Z" fill="currentColor"></path><path d="M14 11.21C14.39 11.35 14.82 11.15 14.96 10.76L15.24 9.98001H17.27L17.55 10.76C17.66 11.07 17.95 11.26 18.26 11.26C18.34 11.26 18.43 11.25 18.51 11.22C18.9 11.08 19.1 10.65 18.96 10.26L17.25 5.47001C17.08 5.04001 16.69 4.76001 16.25 4.76001C15.81 4.76001 15.42 5.04001 15.25 5.49001L13.55 10.26C13.41 10.65 13.61 11.08 14 11.22V11.21ZM16.73 8.48001H15.77L16.25 7.14001L16.73 8.48001Z" fill="currentColor"></path><path d="M18.67 13.46C18.48 13.02 18.08 12.75 17.62 12.75H14.51C14.1 12.75 13.76 13.09 13.76 13.5C13.76 13.91 14.1 14.25 14.51 14.25H16.9L14.07 17.2C13.73 17.56 13.64 18.08 13.83 18.54C14.02 18.98 14.42 19.25 14.88 19.25H18.01C18.42 19.25 18.76 18.91 18.76 18.5C18.76 18.09 18.42 17.75 18.01 17.75H15.62L18.44 14.82C18.78 14.46 18.88 13.93 18.68 13.47L18.67 13.46Z" fill="currentColor"></path></g></svg> <span>Tri A-Z</span></button> <button type="button" title="Vidéos uniquement" class="svelte-1dfpwxx" data-svelte-h="svelte-i2i9l6"><svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.50989 2.00001H15.49C15.7225 1.99995 15.9007 1.99991 16.0565 2.01515C17.1643 2.12352 18.0711 2.78958 18.4556 3.68678H5.54428C5.92879 2.78958 6.83555 2.12352 7.94337 2.01515C8.09917 1.99991 8.27741 1.99995 8.50989 2.00001Z" fill="currentColor"></path><path d="M6.31052 4.72312C4.91989 4.72312 3.77963 5.56287 3.3991 6.67691C3.39117 6.70013 3.38356 6.72348 3.37629 6.74693C3.77444 6.62636 4.18881 6.54759 4.60827 6.49382C5.68865 6.35531 7.05399 6.35538 8.64002 6.35547H15.5321C17.1181 6.35538 18.4835 6.35531 19.5639 6.49382C19.9833 6.54759 20.3977 6.62636 20.7958 6.74693C20.7886 6.72348 20.781 6.70013 20.773 6.67691C20.3925 5.56287 19.2522 4.72312 17.8616 4.72312H6.31052Z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M15.3276 7.54204H8.67239C5.29758 7.54204 3.61017 7.54204 2.66232 8.52887C1.71447 9.5157 1.93748 11.0403 2.38351 14.0896L2.80648 16.9811C3.15626 19.3724 3.33115 20.568 4.22834 21.284C5.12553 22 6.4488 22 9.09534 22H14.9046C17.5512 22 18.8745 22 19.7717 21.284C20.6689 20.568 20.8437 19.3724 21.1935 16.9811L21.6165 14.0896C22.0625 11.0404 22.2855 9.51569 21.3377 8.52887C20.3898 7.54204 18.7024 7.54204 15.3276 7.54204ZM14.5812 15.7942C15.1396 15.4481 15.1396 14.5519 14.5812 14.2058L11.2096 12.1156C10.6669 11.7792 10 12.2171 10 12.9099V17.0901C10 17.7829 10.6669 18.2208 11.2096 17.8844L14.5812 15.7942Z" fill="currentColor"></path></svg> <span>Vidéos uniquement</span></button></div></div> <nav class="navbar svelte-1dfpwxx"><ul class="menu svelte-1dfpwxx"></ul></nav></div> <div class="DNA_cont" data-svelte-h="svelte-19x3gy3"><div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div> <div class="nucleobase"></div></div> <div class="card-container svelte-1dfpwxx"></div>  <button class="back-to-top svelte-1a79323 hidden" title="Back To Top" data-svelte-h="svelte-1muz9rd"><svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M17 15L12 10L7 15" stroke="#11d7f2" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="round"></path></g></svg> </button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1cmr4vp = {
+					__sveltekit_189u3pt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6a020622.js"),
-						import("./_app/immutable/entry/app.1269ce83.js")
+						import("./_app/immutable/entry/start.DHPVvy3J.js"),
+						import("./_app/immutable/entry/app.DsgfxI2b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
