--- a/session.html
+++ b/session.html
@@ -8,25 +8,25 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.298245b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6a020622.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.41710613.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1391fc83.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1269ce83.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.225df89e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5b1034ee.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.41b53aeb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.60a4f427.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e8c02540.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/3.DHbhyUEJ.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DHPVvy3J.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BKsagYVn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.a8AA66vu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.D52O7GZ3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DsgfxI2b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdRF83hW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C3Zu06lm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.CjYKren3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.25CGPZa3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Ckp6p-Kq.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-jbyr2f"><a href="./" class="one-liner svelte-jbyr2f" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-jbyr2f"></i> Retour</a> <div class="DNA_cont svelte-jbyr2f" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div> <div class="nucleobase svelte-jbyr2f"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-nkt9ta"><a href="./" class="one-liner svelte-nkt9ta" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-nkt9ta"></i> Retour</a> <div class="DNA_cont svelte-nkt9ta" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div> <div class="nucleobase svelte-nkt9ta"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_1cmr4vp = {
+					__sveltekit_189u3pt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6a020622.js"),
-						import("./_app/immutable/entry/app.1269ce83.js")
+						import("./_app/immutable/entry/start.DHPVvy3J.js"),
+						import("./_app/immutable/entry/app.DsgfxI2b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
