--- a/session.html
+++ b/session.html
@@ -10,23 +10,23 @@
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.91385e78.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e14de263.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0e7aa1b4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.01a23992.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.420b75f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.d03bb617.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7bc1dcb1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.2823ede9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3a41f11f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6455130f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.c01a2c1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.34451cb0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.4475b3a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.73089128.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.c0e9faec.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.c900f3d1.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">   <main class="svelte-1awihg0"><a href="./" class="one-liner svelte-1awihg0" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-1awihg0"></i> Retour</a> <div class="DNA_cont svelte-1awihg0" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_1tmtcfs = {
+					__sveltekit_f6d1ni = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e14de263.js"),
-						import("./_app/immutable/entry/app.7bc1dcb1.js")
+						import("./_app/immutable/entry/start.01a23992.js"),
+						import("./_app/immutable/entry/app.3a41f11f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
