--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		
 		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.e5defab6.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.01a23992.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.420b75f9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f2ca3238.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.2cd55fa0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.2823ede9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3a41f11f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.10cc243b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fe2ced56.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6455130f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.c01a2c1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.306c1916.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.6c97b7ea.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.73089128.js"><title>JFR 2024</title><!-- HEAD_svelte-tez4m2_START --><!-- HEAD_svelte-tez4m2_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_f6d1ni = {
+					__sveltekit_w07wd9 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.01a23992.js"),
-						import("./_app/immutable/entry/app.3a41f11f.js")
+						import("./_app/immutable/entry/start.f2ca3238.js"),
+						import("./_app/immutable/entry/app.fe2ced56.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
