--- a/session.html
+++ b/session.html
@@ -8,25 +8,25 @@
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.2dd80857.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.91385e78.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.117e8b22.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.29f0223f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.0b3707f5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.69882f36.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c11eedf8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.6455130f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.c01a2c1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.199d712f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.73089128.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.175cce17.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
+		<link href="./_app/immutable/assets/0.DDhRvUnK.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/3.96OEJX5h.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0Y4PnHB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BrxNRJvE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.a8AA66vu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CN4toTG-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.N_mwFSpk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CS1zzDbV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1gnPrwY.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.aoX-1VNX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Constants.Ba-ZIIR1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C8Y4DxYi.js"><title>JFR 2024</title><!-- HEAD_svelte-135ofcf_START --><!-- HEAD_svelte-135ofcf_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <main class="svelte-1awihg0"><a href="./" class="one-liner svelte-1awihg0" data-svelte-h="svelte-1ry70y4"><i class="gg-chevron-left svelte-1awihg0"></i> Retour</a> <div class="DNA_cont svelte-1awihg0" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div> <div class="nucleobase svelte-1awihg0"></div></div>  </main> 
+		<div style="display: contents">   <main class="svelte-1qd5umd"><a href="./" class="one-liner svelte-1qd5umd" data-svelte-h="svelte-1su23mt"><i class="gg-chevron-left svelte-1qd5umd"></i> Retour</a> <div class="DNA_cont svelte-1qd5umd" data-svelte-h="svelte-9yhqwq"><div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div> <div class="nucleobase svelte-1qd5umd"></div></div>  </main> 
 			
 			<script>
 				{
-					__sveltekit_vff5qx = {
+					__sveltekit_quyrr1 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.117e8b22.js"),
-						import("./_app/immutable/entry/app.c11eedf8.js")
+						import("./_app/immutable/entry/start.D0Y4PnHB.js"),
+						import("./_app/immutable/entry/app.N_mwFSpk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
